@startuml
'https://plantuml.com/class-diagram


class ShipCaptain{

}

class Company{
}
class Container {

    -String containerID <<b>PK>
    -int checkDigit
    -String ISO
    -int gross
    -int tare
    -int payload
    -int maxVolume
    -int repairRecommendation

}

ShipCaptain --> Company
Company --> Container

@enduml